Updates to races

--- a/races.html
+++ b/races.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-14 Fri 12:12 -->
+<!-- 2023-07-14 Fri 12:17 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Races</title>
@@ -202,26 +202,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf98f302">1. Human</a>
+<li><a href="#org77a8d51">1. Human</a>
 <ul>
-<li><a href="#orgeaea56d">1.1. Racial traits</a></li>
+<li><a href="#org251fa0f">1.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#orge404859">2. Elf</a></li>
-<li><a href="#orge3408a1">3. Orc</a></li>
-<li><a href="#org6e86732">4. Demon</a></li>
-<li><a href="#org44db9da">5. Hobbit</a>
+<li><a href="#orgf5603d0">2. Elf</a></li>
+<li><a href="#org36dde4b">3. Orc</a></li>
+<li><a href="#org981ec2c">4. Demon</a></li>
+<li><a href="#org45a4c17">5. Hobbit</a>
 <ul>
-<li><a href="#orgaa5ea2a">5.1. Racial traits</a></li>
+<li><a href="#orgdbef391">5.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org87c0708">6. Dwarf</a>
+<li><a href="#org3d328da">6. Dwarf</a>
 <ul>
-<li><a href="#orgcff9ff4">6.1. Racial traits</a></li>
+<li><a href="#orgd2f8c10">6.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org5ab21db">7. Elemental</a></li>
-<li><a href="#org5f715c3">8. Reptilian</a></li>
+<li><a href="#org19f992c">7. Elemental</a></li>
+<li><a href="#org7b8d7be">8. Reptilian</a></li>
 </ul>
 </div>
 </div>
@@ -232,7 +232,7 @@
 </div>
 <hr />
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-
+<caption class="t-above"><span class="table-number">Table 1:</span> Character Race Overview</caption>
 
 <colgroup>
 <col  class="org-left" />
@@ -320,8 +320,8 @@
 </tr>
 </tbody>
 </table>
-<div id="outline-container-orgf98f302" class="outline-2">
-<h2 id="orgf98f302"><span class="section-number-2">1.</span> Human</h2>
+<div id="outline-container-org77a8d51" class="outline-2">
+<h2 id="org77a8d51"><span class="section-number-2">1.</span> Human</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 The white bread of WORLD&rsquo;s races. Not particularly good at anything, not incompetent either.
@@ -331,8 +331,8 @@ The white bread of WORLD&rsquo;s races. Not particularly good at anything, not i
 Humans can quickly learn 1 other language, if they meet a good teacher.
 </p>
 </div>
-<div id="outline-container-orgeaea56d" class="outline-3">
-<h3 id="orgeaea56d"><span class="section-number-3">1.1.</span> Racial traits</h3>
+<div id="outline-container-org251fa0f" class="outline-3">
+<h3 id="org251fa0f"><span class="section-number-3">1.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 +1 to any
@@ -341,30 +341,30 @@ Humans can quickly learn 1 other language, if they meet a good teacher.
 </div>
 </div>
 </div>
-<div id="outline-container-orge404859" class="outline-2">
-<h2 id="orge404859"><span class="section-number-2">2.</span> Elf</h2>
+<div id="outline-container-orgf5603d0" class="outline-2">
+<h2 id="orgf5603d0"><span class="section-number-2">2.</span> Elf</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Graceful, magical beings attuned to nature and the harmony of WORLD. Elves love nature, magic, art, and all good things in the world.
 </p>
 </div>
 </div>
-<div id="outline-container-orge3408a1" class="outline-2">
-<h2 id="orge3408a1"><span class="section-number-2">3.</span> Orc</h2>
+<div id="outline-container-org36dde4b" class="outline-2">
+<h2 id="org36dde4b"><span class="section-number-2">3.</span> Orc</h2>
 </div>
-<div id="outline-container-org6e86732" class="outline-2">
-<h2 id="org6e86732"><span class="section-number-2">4.</span> Demon</h2>
+<div id="outline-container-org981ec2c" class="outline-2">
+<h2 id="org981ec2c"><span class="section-number-2">4.</span> Demon</h2>
 </div>
-<div id="outline-container-org44db9da" class="outline-2">
-<h2 id="org44db9da"><span class="section-number-2">5.</span> Hobbit</h2>
+<div id="outline-container-org45a4c17" class="outline-2">
+<h2 id="org45a4c17"><span class="section-number-2">5.</span> Hobbit</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Nobody quite knows how the hobbit came to be in WORLD. All that is known is that the race has seemly existed on the fringes of society, outlasting kingdoms and empires by avoiding notice and keeping to themselves. They&rsquo;re concerned with basic needs and simple pleasures, but little patience for complex plans and grand designs.
 </p>
 </div>
 
-<div id="outline-container-orgaa5ea2a" class="outline-3">
-<h3 id="orgaa5ea2a"><span class="section-number-3">5.1.</span> Racial traits</h3>
+<div id="outline-container-orgdbef391" class="outline-3">
+<h3 id="orgdbef391"><span class="section-number-3">5.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-5-1">
 <p>
 +1 to charisma
@@ -373,8 +373,8 @@ Lucky
 </div>
 </div>
 </div>
-<div id="outline-container-org87c0708" class="outline-2">
-<h2 id="org87c0708"><span class="section-number-2">6.</span> Dwarf</h2>
+<div id="outline-container-org3d328da" class="outline-2">
+<h2 id="org3d328da"><span class="section-number-2">6.</span> Dwarf</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Deep in the roots of WORLD&rsquo;s mountains, dwarven kingdoms have raised great treasures, and waged great wars against goblin kind. These skilled workers have superior skills with their hands and hammers, but aren&rsquo;t seen as particularly bright by the other races of WORLD.
@@ -388,8 +388,8 @@ Accustomed to life underground, dwarves have superior vision in dark and dim con
 Dwarves can also speak Dwarvish.
 </p>
 </div>
-<div id="outline-container-orgcff9ff4" class="outline-3">
-<h3 id="orgcff9ff4"><span class="section-number-3">6.1.</span> Racial traits</h3>
+<div id="outline-container-orgd2f8c10" class="outline-3">
+<h3 id="orgd2f8c10"><span class="section-number-3">6.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-6-1">
 <p>
 +2 to constitution
@@ -400,11 +400,11 @@ Dark vision
 </div>
 </div>
 </div>
-<div id="outline-container-org5ab21db" class="outline-2">
-<h2 id="org5ab21db"><span class="section-number-2">7.</span> Elemental</h2>
+<div id="outline-container-org19f992c" class="outline-2">
+<h2 id="org19f992c"><span class="section-number-2">7.</span> Elemental</h2>
 </div>
-<div id="outline-container-org5f715c3" class="outline-2">
-<h2 id="org5f715c3"><span class="section-number-2">8.</span> Reptilian</h2>
+<div id="outline-container-org7b8d7be" class="outline-2">
+<h2 id="org7b8d7be"><span class="section-number-2">8.</span> Reptilian</h2>
 <div class="outline-text-2" id="text-8">
 <hr />
 </div>
@@ -413,7 +413,7 @@ Dark vision
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-03 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-14 Fri 12:12</p>
+<p class="date">Created: 2023-07-14 Fri 12:17</p>
 </div>
 </body>
 </html>
