--- a/classes/subclasses/muse.html
+++ b/classes/subclasses/muse.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-12 Wed 18:01 -->
+<!-- 2023-07-14 Fri 12:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Muse</title>
@@ -202,18 +202,23 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4cbd2f4">1. Level 1</a></li>
-<li><a href="#orgdc73136">2. Level 2</a></li>
-<li><a href="#orgeba8859">3. Level 5</a></li>
-<li><a href="#orge94d177">4. Level 10</a></li>
-<li><a href="#orga4d1673">5. Level 15</a></li>
-<li><a href="#org2bdf7d1">6. Level 19</a></li>
+<li><a href="#org6e01746">1. Level 1</a></li>
+<li><a href="#org9a6402d">2. Level 2</a></li>
+<li><a href="#org49d1f05">3. Level 5</a></li>
+<li><a href="#org5040732">4. Level 10</a></li>
+<li><a href="#org94c6593">5. Level 15</a></li>
+<li><a href="#org28ea5b2">6. Level 19</a></li>
 </ul>
 </div>
 </div>
+<div class="org-center">
+<p>
+[<a href="../../dnd.html#ID-DND">Main Menu</a>] [<a href="../classes.html#ID-campaign-classes">Character Selection</a>] [<a href="../classes.html#ID-campaign-classes">Classes</a>] [<a href="../bard.html#ID-8bb9a08a-97c0-4231-a002-ad7dcf83e4d8">Bard</a>]
+</p>
+</div>
 <hr />
-<div id="outline-container-org4cbd2f4" class="outline-2">
-<h2 id="org4cbd2f4"><span class="section-number-2">1.</span> Level 1</h2>
+<div id="outline-container-org6e01746" class="outline-2">
+<h2 id="org6e01746"><span class="section-number-2">1.</span> Level 1</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Gain the ability to play two instruments of you choice
@@ -228,8 +233,8 @@ Gain an enchanted instrument of your choice. This deals 1d6 damage to all enemie
 </p>
 </div>
 </div>
-<div id="outline-container-orgdc73136" class="outline-2">
-<h2 id="orgdc73136"><span class="section-number-2">2.</span> Level 2</h2>
+<div id="outline-container-org9a6402d" class="outline-2">
+<h2 id="org9a6402d"><span class="section-number-2">2.</span> Level 2</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Obtain an eternal, irrevocable, and unchangeable cultural side-quest from the Cultural Side-Quest Generator. Completion of the side-quest may result in additional awards, and will 1 result in the player being rewarded another cultural side-quest.
@@ -240,16 +245,16 @@ Gain <span class="underline">Hypnosis</span>: You may attempt to Hypnotize low-I
 </p>
 </div>
 </div>
-<div id="outline-container-orgeba8859" class="outline-2">
-<h2 id="orgeba8859"><span class="section-number-2">3.</span> Level 5</h2>
+<div id="outline-container-org49d1f05" class="outline-2">
+<h2 id="org49d1f05"><span class="section-number-2">3.</span> Level 5</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Your enchanted instrument&rsquo;s base damages increases to 1d8.
 </p>
 </div>
 </div>
-<div id="outline-container-orge94d177" class="outline-2">
-<h2 id="orge94d177"><span class="section-number-2">4.</span> Level 10</h2>
+<div id="outline-container-org5040732" class="outline-2">
+<h2 id="org5040732"><span class="section-number-2">4.</span> Level 10</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Gain <span class="underline">Spectral Manager</span>: The manager will keep you informed of any important cultural and political requests upon request. It may also send you concert invites, and give you a hookup for drugs.
@@ -260,16 +265,16 @@ Gain <span class="underline">Booking Agent</span>: Once per long rest, you many 
 </p>
 </div>
 </div>
-<div id="outline-container-orga4d1673" class="outline-2">
-<h2 id="orga4d1673"><span class="section-number-2">5.</span> Level 15</h2>
+<div id="outline-container-org94c6593" class="outline-2">
+<h2 id="org94c6593"><span class="section-number-2">5.</span> Level 15</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Gain a Patron Demigod. One of the Demigods will adopt you as their muse, and once every 3 combat sessions, you may summon the Demigod to assist you. Note that not all Demigods are good fighters. Patron Demigods are automatically reassigned upon the death of the player&rsquo;s previous Demigod. Do with that what you will. There may be consequences if you disappoint your Patron with the music you play.
 </p>
 </div>
 </div>
-<div id="outline-container-org2bdf7d1" class="outline-2">
-<h2 id="org2bdf7d1"><span class="section-number-2">6.</span> Level 19</h2>
+<div id="outline-container-org28ea5b2" class="outline-2">
+<h2 id="org28ea5b2"><span class="section-number-2">6.</span> Level 19</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Gain knowledge of the <span class="underline"><b>Eldrich Tunes</b></span>: Upon playing the Eldrich Tunes to completion, one of the Old Gods will descend upon you to initiate an end-game level encounter. This will result in significant rewards for the actor, and potentially other players in the party.
@@ -290,7 +295,7 @@ Glossary: <a href="../../glossary.html#ID-a3719559-2b06-443a-b75a-96c9aa3f3b26">
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-12 Wed 18:01</p>
+<p class="date">Created: 2023-07-14 Fri 12:27</p>
 </div>
 </body>
 </html>
