--- a/races.html
+++ b/races.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-14 Fri 12:17 -->
+<!-- 2023-07-14 Fri 12:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Races</title>
@@ -202,32 +202,36 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org77a8d51">1. Human</a>
+<li><a href="#org90a0aec">1. Human</a>
 <ul>
-<li><a href="#org251fa0f">1.1. Racial traits</a></li>
+<li><a href="#orgd082188">1.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#orgf5603d0">2. Elf</a></li>
-<li><a href="#org36dde4b">3. Orc</a></li>
-<li><a href="#org981ec2c">4. Demon</a></li>
-<li><a href="#org45a4c17">5. Hobbit</a>
+<li><a href="#orgf754aa6">2. Elf</a>
 <ul>
-<li><a href="#orgdbef391">5.1. Racial traits</a></li>
+<li><a href="#orgd125330">2.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org3d328da">6. Dwarf</a>
+<li><a href="#org7eef6d4">3. Orc</a></li>
+<li><a href="#orgc301954">4. Demon</a></li>
+<li><a href="#orgf57d943">5. Hobbit</a>
 <ul>
-<li><a href="#orgd2f8c10">6.1. Racial traits</a></li>
+<li><a href="#org8a3bdae">5.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org19f992c">7. Elemental</a></li>
-<li><a href="#org7b8d7be">8. Reptilian</a></li>
+<li><a href="#org1893d0a">6. Dwarf</a>
+<ul>
+<li><a href="#org6a13197">6.1. Racial traits</a></li>
+</ul>
+</li>
+<li><a href="#org873dab9">7. Elemental</a></li>
+<li><a href="#org21e66d2">8. Reptilian</a></li>
 </ul>
 </div>
 </div>
 <div class="org-center">
 <p>
-[<a href="dnd.html#ID-DND">Main Menu</a>]
+[<a href="dnd.html#ID-DND">Main Menu</a>] [<a href="player-introduction.html#ID-17a96883-cc40-409c-9fb5-80d5ab0c8379">Player Intro Sheet</a>] [<a href="classes/classes.html#ID-campaign-classes">Classes</a>]
 </p>
 </div>
 <hr />
@@ -265,7 +269,7 @@
 
 <tr>
 <td class="org-left">Elf</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">6</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
@@ -273,7 +277,7 @@
 
 <tr>
 <td class="org-left">Orc</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">8</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
@@ -281,7 +285,7 @@
 
 <tr>
 <td class="org-left">Demon</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">5</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
@@ -289,7 +293,7 @@
 
 <tr>
 <td class="org-left">Hobbit</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">5</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
@@ -297,7 +301,7 @@
 
 <tr>
 <td class="org-left">Dwarf</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">7</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
@@ -305,7 +309,7 @@
 
 <tr>
 <td class="org-left">Elemental</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">5</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
@@ -313,15 +317,15 @@
 
 <tr>
 <td class="org-left">Reptilian</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">7</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 </tbody>
 </table>
-<div id="outline-container-org77a8d51" class="outline-2">
-<h2 id="org77a8d51"><span class="section-number-2">1.</span> Human</h2>
+<div id="outline-container-org90a0aec" class="outline-2">
+<h2 id="org90a0aec"><span class="section-number-2">1.</span> Human</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 The white bread of WORLD&rsquo;s races. Not particularly good at anything, not incompetent either.
@@ -331,50 +335,57 @@ The white bread of WORLD&rsquo;s races. Not particularly good at anything, not i
 Humans can quickly learn 1 other language, if they meet a good teacher.
 </p>
 </div>
-<div id="outline-container-org251fa0f" class="outline-3">
-<h3 id="org251fa0f"><span class="section-number-3">1.1.</span> Racial traits</h3>
+<div id="outline-container-orgd082188" class="outline-3">
+<h3 id="orgd082188"><span class="section-number-3">1.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-1-1">
-<p>
-+1 to any
--1 to any
-</p>
+<ul class="org-ul">
+<li>+1 to any</li>
+<li>-1 to any</li>
+</ul>
 </div>
 </div>
 </div>
-<div id="outline-container-orgf5603d0" class="outline-2">
-<h2 id="orgf5603d0"><span class="section-number-2">2.</span> Elf</h2>
+<div id="outline-container-orgf754aa6" class="outline-2">
+<h2 id="orgf754aa6"><span class="section-number-2">2.</span> Elf</h2>
 <div class="outline-text-2" id="text-2">
 <p>
-Graceful, magical beings attuned to nature and the harmony of WORLD. Elves love nature, magic, art, and all good things in the world.
+Graceful, beautiful, and intensely magical beings attuned to nature and the harmony of WORLD. Elves love nature, magic, art, and all good things in the world.
+</p>
+
+<p>
+Elves can speak Elvish:
 </p>
 </div>
+<div id="outline-container-orgd125330" class="outline-3">
+<h3 id="orgd125330"><span class="section-number-3">2.1.</span> Racial traits</h3>
 </div>
-<div id="outline-container-org36dde4b" class="outline-2">
-<h2 id="org36dde4b"><span class="section-number-2">3.</span> Orc</h2>
 </div>
-<div id="outline-container-org981ec2c" class="outline-2">
-<h2 id="org981ec2c"><span class="section-number-2">4.</span> Demon</h2>
+<div id="outline-container-org7eef6d4" class="outline-2">
+<h2 id="org7eef6d4"><span class="section-number-2">3.</span> Orc</h2>
 </div>
-<div id="outline-container-org45a4c17" class="outline-2">
-<h2 id="org45a4c17"><span class="section-number-2">5.</span> Hobbit</h2>
+<div id="outline-container-orgc301954" class="outline-2">
+<h2 id="orgc301954"><span class="section-number-2">4.</span> Demon</h2>
+</div>
+<div id="outline-container-orgf57d943" class="outline-2">
+<h2 id="orgf57d943"><span class="section-number-2">5.</span> Hobbit</h2>
 <div class="outline-text-2" id="text-5">
 <p>
-Nobody quite knows how the hobbit came to be in WORLD. All that is known is that the race has seemly existed on the fringes of society, outlasting kingdoms and empires by avoiding notice and keeping to themselves. They&rsquo;re concerned with basic needs and simple pleasures, but little patience for complex plans and grand designs.
+Nobody quite knows how the hobbit came to be in WORLD. All that is known is that the race has seemly existed on the fringes of society, outlasting kingdoms and empires by avoiding notice and keeping to themselves. They&rsquo;re concerned with basic needs and simple pleasures, but have little patience for complex plans and grand designs.
 </p>
 </div>
 
-<div id="outline-container-orgdbef391" class="outline-3">
-<h3 id="orgdbef391"><span class="section-number-3">5.1.</span> Racial traits</h3>
+<div id="outline-container-org8a3bdae" class="outline-3">
+<h3 id="org8a3bdae"><span class="section-number-3">5.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-5-1">
-<p>
-+1 to charisma
-Lucky
-</p>
+<ul class="org-ul">
+<li>+1 to charisma</li>
+<li>Lucky</li>
+</ul>
 </div>
 </div>
 </div>
-<div id="outline-container-org3d328da" class="outline-2">
-<h2 id="org3d328da"><span class="section-number-2">6.</span> Dwarf</h2>
+<div id="outline-container-org1893d0a" class="outline-2">
+<h2 id="org1893d0a"><span class="section-number-2">6.</span> Dwarf</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Deep in the roots of WORLD&rsquo;s mountains, dwarven kingdoms have raised great treasures, and waged great wars against goblin kind. These skilled workers have superior skills with their hands and hammers, but aren&rsquo;t seen as particularly bright by the other races of WORLD.
@@ -385,26 +396,26 @@ Accustomed to life underground, dwarves have superior vision in dark and dim con
 </p>
 
 <p>
-Dwarves can also speak Dwarvish.
+Dwarves can speak Dwarvish.
 </p>
 </div>
-<div id="outline-container-orgd2f8c10" class="outline-3">
-<h3 id="orgd2f8c10"><span class="section-number-3">6.1.</span> Racial traits</h3>
+<div id="outline-container-org6a13197" class="outline-3">
+<h3 id="org6a13197"><span class="section-number-3">6.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-6-1">
-<p>
-+2 to constitution
-+1 to strength
-Tool proficiency
-Dark vision
-</p>
+<ul class="org-ul">
+<li>+2 to constitution</li>
+<li>+1 to strength</li>
+<li>Tool proficiency</li>
+<li>Dark vision</li>
+</ul>
 </div>
 </div>
 </div>
-<div id="outline-container-org19f992c" class="outline-2">
-<h2 id="org19f992c"><span class="section-number-2">7.</span> Elemental</h2>
+<div id="outline-container-org873dab9" class="outline-2">
+<h2 id="org873dab9"><span class="section-number-2">7.</span> Elemental</h2>
 </div>
-<div id="outline-container-org7b8d7be" class="outline-2">
-<h2 id="org7b8d7be"><span class="section-number-2">8.</span> Reptilian</h2>
+<div id="outline-container-org21e66d2" class="outline-2">
+<h2 id="org21e66d2"><span class="section-number-2">8.</span> Reptilian</h2>
 <div class="outline-text-2" id="text-8">
 <hr />
 </div>
@@ -413,7 +424,7 @@ Dark vision
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-03 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-14 Fri 12:17</p>
+<p class="date">Created: 2023-07-14 Fri 12:33</p>
 </div>
 </body>
 </html>
