--- a/classes/subclasses/actor.html
+++ b/classes/subclasses/actor.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-14 Fri 12:27 -->
+<!-- 2023-07-16 Sun 21:18 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Actor</title>
@@ -202,12 +202,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf9f31dc">1. Level 1:</a></li>
-<li><a href="#orgb1cbc44">2. Level 2:</a></li>
-<li><a href="#org6ee71d1">3. Level 5:</a></li>
-<li><a href="#org90d82a7">4. Level 10:</a></li>
-<li><a href="#orgea3d049">5. Level 15:</a></li>
-<li><a href="#org4072ac9">6. Level 19:</a></li>
+<li><a href="#org60fa5be">1. Level 1</a></li>
+<li><a href="#org9481df0">2. Level 2</a></li>
+<li><a href="#org7d5849d">3. Level 5</a></li>
+<li><a href="#orgcdb3a5c">4. Level 10</a></li>
+<li><a href="#org202ab57">5. Level 15</a></li>
+<li><a href="#org225067a">6. Level 19</a></li>
 </ul>
 </div>
 </div>
@@ -217,24 +217,24 @@
 </p>
 </div>
 <hr />
-<div id="outline-container-orgf9f31dc" class="outline-2">
-<h2 id="orgf9f31dc"><span class="section-number-2">1.</span> Level 1:</h2>
+<div id="outline-container-org60fa5be" class="outline-2">
+<h2 id="org60fa5be"><span class="section-number-2">1.</span> Level 1</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 You are famous. This makes you somewhat recognizable. NPC attitudes may vary towards you, and many will have a first impression of you. You are more likely to be recognized in more populated parts of the world.
 </p>
 </div>
 </div>
-<div id="outline-container-orgb1cbc44" class="outline-2">
-<h2 id="orgb1cbc44"><span class="section-number-2">2.</span> Level 2:</h2>
+<div id="outline-container-org9481df0" class="outline-2">
+<h2 id="org9481df0"><span class="section-number-2">2.</span> Level 2</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Obtain an eternal, irrevocable, and unchangeable cultural side-quest from the Cultural Side-Quest Generator. Completion of the side-quest may result in additional awards, and will 1 result in the player being rewarded another cultural side-quest.
 </p>
 </div>
 </div>
-<div id="outline-container-org6ee71d1" class="outline-2">
-<h2 id="org6ee71d1"><span class="section-number-2">3.</span> Level 5:</h2>
+<div id="outline-container-org7d5849d" class="outline-2">
+<h2 id="org7d5849d"><span class="section-number-2">3.</span> Level 5</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Gain <span class="underline">Attraction</span>: This trait places low Wisdom <sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup> characters under the spell of your magnificent good looks twice per long rest. This can only effect <b>1 target at a time</b>. While attracted to you, this target is distracted from the actions of the rest of the party for three turns, but it <b>EXTREMELY</b> aware of your actions. They will not attack you unless put in extreme circumstances <sup><a id="fnr.2" class="footref" href="#fn.2" role="doc-backlink">2</a></sup>.
@@ -245,8 +245,8 @@ Gain <span class="underline">Perfect Memory</span>: Anything the DM has said to 
 </p>
 </div>
 </div>
-<div id="outline-container-org90d82a7" class="outline-2">
-<h2 id="org90d82a7"><span class="section-number-2">4.</span> Level 10:</h2>
+<div id="outline-container-orgcdb3a5c" class="outline-2">
+<h2 id="orgcdb3a5c"><span class="section-number-2">4.</span> Level 10</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Gain <span class="underline">Spectral Manager</span>: The manager will keep you informed of any important cultural and political requests upon request. It may also send you concert invites, and give you a hookup for drugs.
@@ -257,8 +257,8 @@ Gain <span class="underline">Booking Agent</span>: Once per long rest, you many 
 </p>
 </div>
 </div>
-<div id="outline-container-orgea3d049" class="outline-2">
-<h2 id="orgea3d049"><span class="section-number-2">5.</span> Level 15:</h2>
+<div id="outline-container-org202ab57" class="outline-2">
+<h2 id="org202ab57"><span class="section-number-2">5.</span> Level 15</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 You can now perform a perfect impersonation of anyone, as long as that person themselves does not observe you. Targets will be convinced you are the other person and treat you as such.
@@ -269,8 +269,8 @@ You gain a <span class="underline">Costume Kit</span>: Within reason, you can ma
 </p>
 </div>
 </div>
-<div id="outline-container-org4072ac9" class="outline-2">
-<h2 id="org4072ac9"><span class="section-number-2">6.</span> Level 19:</h2>
+<div id="outline-container-org225067a" class="outline-2">
+<h2 id="org225067a"><span class="section-number-2">6.</span> Level 19</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Gain knowledge of the <span class="underline"><b>The Forgotten Act</b></span>: Upon performing the Forgotten Act in its entirety, one of the Old Gods will descend upon you to initiate an end-game level encounter. This will result in significant rewards for the actor, and potentially other players in the party.
@@ -296,7 +296,7 @@ Extreme circumstances are determined at the discretion of the DM
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-14 Fri 12:27</p>
+<p class="date">Created: 2023-07-16 Sun 21:18</p>
 </div>
 </body>
 </html>
