--- a/classes/rogue.html
+++ b/classes/rogue.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-17 Mon 14:29 -->
+<!-- 2023-07-18 Tue 16:36 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Rogue</title>
@@ -202,7 +202,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge4c7d51">1. Level-up</a></li>
+<li><a href="#org00f64af">1. Level-up</a></li>
 </ul>
 </div>
 </div>
@@ -217,7 +217,7 @@ Sneak, steal, deceive, and assassinate those who oppose your endeavors.
 </p>
 
 <p>
-To begin as a rogue, chose a subclass [<a href="subclasses/ninja.html#ID-befa4d8e-52ce-4195-9f97-06aee49da164">Ninja</a>, <a href="subclasses/con_man.html#ID-072dbba0-dd37-4c57-ae44-959867358be8">Con man</a>, <a href="subclasses/thief.html#ID-d1b58c03-fc76-44d6-aba2-5104de8726aa">Thief</a>]. These classes give you special traits that increase in power as you get stronger, and a few distinct advantages right off the bat.
+To begin as a rogue, chose a subclass [<a href="subclasses/ninja.html#ID-befa4d8e-52ce-4195-9f97-06aee49da164">Ninja</a>, <a href="subclasses/con_man.html#ID-072dbba0-dd37-4c57-ae44-959867358be8">Con man</a>]. These classes give you special traits that increase in power as you get stronger, and a few distinct advantages right off the bat.
 </p>
 
 <ul class="org-ul">
@@ -225,8 +225,8 @@ To begin as a rogue, chose a subclass [<a href="subclasses/ninja.html#ID-befa4d8
 <li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP.</li>
 </ul>
 
-<div id="outline-container-orge4c7d51" class="outline-2">
-<h2 id="orge4c7d51"><span class="section-number-2">1.</span> Level-up</h2>
+<div id="outline-container-org00f64af" class="outline-2">
+<h2 id="org00f64af"><span class="section-number-2">1.</span> Level-up</h2>
 <div class="outline-text-2" id="text-1">
 <ol class="org-ol">
 <li>Gain the ability to Sneak Attack. If invisible or hidden, gain an extra 1d6 damage on the next attack.</li>
@@ -257,7 +257,7 @@ To begin as a rogue, chose a subclass [<a href="subclasses/ninja.html#ID-befa4d8
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-17 Mon 14:29</p>
+<p class="date">Created: 2023-07-18 Tue 16:36</p>
 </div>
 </body>
 </html>
