--- a/classes/subclasses/chaos_sorcerer.html
+++ b/classes/subclasses/chaos_sorcerer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-24 Mon 21:28 -->
+<!-- 2023-07-24 Mon 21:52 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Chaos Sorcerer</title>
@@ -202,8 +202,10 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgec7256f">1. Level 1 Sorceries</a></li>
-<li><a href="#org7eb75a3">2. Level 2 Sorceries</a></li>
+<li><a href="#orgb8d3fe8">1. Level 1 Sorceries</a></li>
+<li><a href="#orgfe8fa42">2. Level 2 Sorceries</a></li>
+<li><a href="#orgc339b48">3. Level 3 Sorceries</a></li>
+<li><a href="#org892b802">4. Level 4</a></li>
 </ul>
 </div>
 </div>
@@ -217,8 +219,8 @@
 Chaos sorcerers play with the future, and is able to frustrate enemies and allies alike by impeding their endeavors. They can grant powerful assistance to the party in times of need, but suffer from random damage debuffs.
 </p>
 
-<div id="outline-container-orgec7256f" class="outline-2">
-<h2 id="orgec7256f"><span class="section-number-2">1.</span> Level 1 Sorceries</h2>
+<div id="outline-container-orgb8d3fe8" class="outline-2">
+<h2 id="orgb8d3fe8"><span class="section-number-2">1.</span> Level 1 Sorceries</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><span class="underline"><b>Delayed Gratification</b></span>: Roll to hit two enemies within 20 feet. If successful, next turn both enemies will take 2d6 force damage.</li>
@@ -227,8 +229,8 @@ Chaos sorcerers play with the future, and is able to frustrate enemies and allie
 </ul>
 </div>
 </div>
-<div id="outline-container-org7eb75a3" class="outline-2">
-<h2 id="org7eb75a3"><span class="section-number-2">2.</span> Level 2 Sorceries</h2>
+<div id="outline-container-orgfe8fa42" class="outline-2">
+<h2 id="orgfe8fa42"><span class="section-number-2">2.</span> Level 2 Sorceries</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Borrowed Luck</b></span>: Grant all allies +3 on rolls next turn. This spell does not apply to you.</li>
@@ -237,11 +239,23 @@ Chaos sorcerers play with the future, and is able to frustrate enemies and allie
 </ul>
 </div>
 </div>
+<div id="outline-container-orgc339b48" class="outline-2">
+<h2 id="orgc339b48"><span class="section-number-2">3.</span> Level 3 Sorceries</h2>
+<div class="outline-text-2" id="text-3">
+<ul class="org-ul">
+<li><span class="underline"><b>Omen</b></span>: Learn what typ eof damage all enemies are vulnerable to. For the rest of combat, all allies attacks that deal force damage deal that type of damage instead. All attacks against enemies deal 50% more damage for two turns.</li>
+<li><span class="underline"><b>Lockout</b></span>: Accelerate the effects of all magical effects two turns. Next turn you are the only person able to use magic. <i>Some magic is not affected by <b>Lockout</b>. Consult with DM.</i></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org892b802" class="outline-2">
+<h2 id="org892b802"><span class="section-number-2">4.</span> Level 4</h2>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-17 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-24 Mon 21:28</p>
+<p class="date">Created: 2023-07-24 Mon 21:52</p>
 </div>
 </body>
 </html>
