--- a/classes/wizard.html
+++ b/classes/wizard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-12 Wed 16:08 -->
+<!-- 2023-07-30 Sun 20:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Wizard</title>
@@ -202,25 +202,33 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7e29b74">1. Level-up guide</a></li>
+<li><a href="#org777c021">1. Level-up guide</a></li>
 </ul>
 </div>
 </div>
+<div class="org-center">
+<p>
+[<a href="../dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>]
+</p>
+</div>
 <hr />
-
 <p>
 Become a powerful channel of the magical elements. Use spells primarily, cast using the character&rsquo;s <b>Intelligence</b> stat.
 </p>
 
 <p>
-To begin as a wizard, choose an element to subclass into: [<a href="../../fire_wizard.html#ID-7141f6ab-b3bc-4eeb-9e7e-071452bfc673">Fire</a> 🔥, <a href="../../storm_wizard.html#ID-4ebd35da-05f7-456f-88b8-c8865a270b8f">Storm</a> 🌩, <a href="../../radiant_wizard.html#ID-8153acaf-ac20-4b00-8ac0-fa423c4ff5ce">Radiant</a> ✨]. Each element comes with some special abilities as you get stronger, and a few distinct advantages right off the bat. All wizards can learn generic spells in the spell index, wizard specific spells, and elemental spells matching their selected element.
+To begin as a wizard, choose an element to subclass into: [<a href="subclasses/fire_wizard.html#ID-7141f6ab-b3bc-4eeb-9e7e-071452bfc673">Fire</a> 🔥, <a href="subclasses/storm_wizard.html#ID-4ebd35da-05f7-456f-88b8-c8865a270b8f">Storm</a> 🌩, <a href="subclasses/radiant_wizard.html#ID-8153acaf-ac20-4b00-8ac0-fa423c4ff5ce">Radiant</a> ✨]. Each element comes with some special abilities as you get stronger, and a few distinct advantages right off the bat. All wizards can learn generic spells in the spell index, wizard specific spells, and elemental spells matching their selected element. Be sure you apply your level 1 bonuses from your subclass. Make sure to review the Magic Guide to get an understanding of the magic system.
 </p>
 
-<div id="outline-container-org7e29b74" class="outline-2">
-<h2 id="org7e29b74"><span class="section-number-2">1.</span> Level-up guide</h2>
+<ul class="org-ul">
+<li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP.</li>
+</ul>
+
+<div id="outline-container-org777c021" class="outline-2">
+<h2 id="org777c021"><span class="section-number-2">1.</span> Level-up guide</h2>
 <div class="outline-text-2" id="text-1">
 <ol class="org-ol">
-<li>Pick one generic spell, one wizard spell, and one elemental spell (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl 1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.</li>
+<li>Pick one generic spell, one wizard spell, and one elemental spell (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.</li>
 <li>Add one generic spell and one wizard spell to your spell list. Add 1d6 to your health.</li>
 <li>Add one elemental spell and 1d6 health. Add one level one spell slot (Total: 4, 0, 0, 0).</li>
 <li>Gain Recast Recharge and add 1d6 health.</li>
@@ -248,7 +256,7 @@ To begin as a wizard, choose an element to subclass into: [<a href="../../fire_w
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-12 Wed 16:08</p>
+<p class="date">Created: 2023-07-30 Sun 20:24</p>
 </div>
 </body>
 </html>
